# 30122-project-asia-pacific-enthusiastic-coding-apec

./: .gitignore  README.md  hello.py  pyproject.toml  requesting API key
milestones/: milestone1.md  milestone2.md
src/: Data Visualization Initial Code  __main__.py  agriculture_NAICS.csv  data_extracted.json  extract_trade_simulation.py  full_NAICS_production.csv  get_data_prod_agri.py  get_trade_data.py  hhi_production.py  import_production.py  request_api_census.py  time_dropdown.py
src/_cache/: api.census.gov_data_timeseries_intltrade_exports_statenaics_year=2010_month=01_cty_name=_naics=1111_get=cty_code%2cnaics_ldesc%2call_val_mo  api.census.gov_data_timeseries_intltrade_exports_statenaics_year=2010_month=01_cty_name=_naics=1133_get=cty_code%2cnaics_ldesc%2call_val_mo  api.census.gov_data_timeseries_intltrade_exports_statenaics_year=2010_month=01_cty_name=_naics=2111_get=cty_code%2cnaics_ldesc%2call_val_mo  api.census.gov_data_timeseries_intltrade_exports_statenaics_year=2010_month=02_cty_name=_naics=1111_get=cty_code%2cnaics_ldesc%2call_val_mo  api.census.gov_data_timeseries_intltrade_exports_statenaics_year=2010_month=03_cty_name=_naics=1111_get=cty_code%2cnaics_ldesc%2call_val_mo  api.census.gov_data_timeseries_intltrade_exports_statenaics_year=2010_month=04_cty_name=_naics=1111_get=cty_code%2cnaics_ldesc%2call_val_mo  (+1032 more)
src/app/: app.py
src/components/: bar_chart.py  dependency.py  hh_index_bubble.py  ids.py  layout.py  map.py  (+4 more)
tests/: test_dependency.py  test_get_prod_agri.py  test_get_trade_data.py  test_hhi.py  test_hhi_production.py  test_treemap.py
(+13 files in other folders)
